# langgraph-customer-support

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.example.env  langgraph.json  main.py  pyproject.toml  requirements.txt  test.py
.claude/agents/: sdd-architect.md  sdd-auditor.md  sdd-executor.md  sdd-test-writer.md
.github/workflows/: rag-eval-gate.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
chroma_db/60601abc-17b6-4188-8f62-c50e47f13c47/: index_metadata.pickle
evaluation/: requirements-dev.txt  samconfig.toml  template.yaml
evaluation/.aws-sam/: build.toml
evaluation/config/: retrieval_thresholds.json  thresholds.json
evaluation/dataset/: evaluation_dataset.jsonl  retrieval_eval_dataset.jsonl
evaluation/prompts/: kb_prompt_template.txt
evaluation/scripts/: create_eval_prompt.py  prepare_lambda_assets.py  setup_github_oidc.py  setup_manual_eval_assets.py  setup_s3.py  upload_prompt_template.py
evaluation/tests/: conftest.py  test_check_eval_status.py  test_format_notification.py  test_kb_ingestion_complete.py  test_parse_eval_results.py  test_seed_eval_assets.py  test_start_eval_job.py  test_upload_prompt_template.py
kb_provisioning/: README.md  requirements-dev.txt  samconfig.toml  template.yaml
kb_provisioning/.aws-sam/: build.toml
kb_provisioning/scripts/: prepare_lambda_assets.py  seed_and_ingest.py
kb_provisioning/tests/: conftest.py  test_seed_and_ingest.py
src/: state.py  structured_outputs.py
(+54 files in other folders)
