[project]
name = "langgraph-gmail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto>=2.49.0",
    "google-api-python-client>=2.174.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.28",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.27",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.4.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
]
